--- a/docs/dox_src/fm-usersguide.doxyfile.in
+++ b/docs/dox_src/fm-usersguide.doxyfile.in
@@ -16,4 +16,4 @@
 INPUT                 += @MISSION_SOURCE_DIR@/cfe/cmake/sample_defs
 
 PROJECT_NAME           = "FM User's Guide"
-WARN_LOGFILE           = fm_usersguide_warnings.log
+WARN_LOGFILE           = fm-usersguide-warnings.log
