--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -11,6 +11,7 @@ add_cfe_coverage_stubs("fm_internal"
   utilities/fm_test_utils.c
   stubs/fm_cmds_stubs.c
   stubs/fm_cmd_utils_stubs.c
+  stubs/fm_cmd_utils_handlers.c
   stubs/fm_app_stubs.c
   stubs/fm_child_stubs.c
   stubs/fm_tbl_stubs.c
@@ -27,13 +28,13 @@ target_include_directories(coverage-fm_internal-stubs PUBLIC utilities)
 # a *_tests file for each
 foreach(SRCFILE ${APP_SRC_FILES})
 
-    # Get the base sourcefile name as a module name without path or the  
+    # Get the base sourcefile name as a module name without path or the
     # extension, this will be used as the base name of the unit test file.
     get_filename_component(UNIT_NAME "${SRCFILE}" NAME_WE)
 
     # Use the module name to make the test name by adding _tests to the end
     set(TESTS_NAME "${UNIT_NAME}_tests")
-    
+
     # Make the test sourcefile name with unit test path and extension
     set(TESTS_SOURCE_FILE "${PROJECT_SOURCE_DIR}/unit-test/${TESTS_NAME}.c")
 
@@ -42,5 +43,5 @@ foreach(SRCFILE ${APP_SRC_FILES})
 
     # Add dependency to utilities and internal stubs
     add_cfe_coverage_dependency(fm "${UNIT_NAME}" fm_internal)
-   
+
 endforeach()
