Fix #67, Moves interface definition files to inc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,5 @@
 project(CFS_FM C)
 
-include_directories(fsw/src)
-include_directories(fsw/mission_inc)
-include_directories(fsw/platform_inc)
-
 # Uncomment the below include if decompress functionality is
 # enabled in FM
 # include_directories(${fs_lib_MISSION_DIR}/fsw/public_inc)
@@ -18,6 +14,9 @@ set(APP_SRC_FILES
 
 # Create the app module
 add_cfe_app(fm ${APP_SRC_FILES})
+
+# This permits direct access to public headers in the fsw/inc directory
+target_include_directories(fm PUBLIC fsw/inc)
 
 set(APP_TABLE_FILES
   fsw/tables/fm_monitor.c
