Fix #75, move app global to internal include
Global data structures should not be defined in the public include
files, they should be private to the local source directory.

Unit test is justified in accessing this file directly, so provisions
are also made to permit this.

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -9,6 +9,7 @@
 
 add_cfe_coverage_stubs("fm_internal"
   utilities/fm_test_utils.c
+  stubs/fm_global_stubs.c
   stubs/fm_cmds_stubs.c
   stubs/fm_cmd_utils_stubs.c
   stubs/fm_cmd_utils_handlers.c
