Fix #73, compression selectable at source file level
Adds a cmake option for compression sub-component implementation.  This
replaces the FM_INCLUDE_DECOMPRESS option in fm_platform_cfg.h.

Currently available options are:
 - fslib (should be equivalent to FM_INCLUDE_DECOMPRESS set)
 - none (should be equivalent to FM_INCLUDE_DECOMPRESS unset)
 - zlib (stub for future work)

This lays the groundwork to support compression in addition to
decompression, using an external 3rd part library if desired.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,14 @@
 project(CFS_FM C)
 
-# Uncomment the below include if decompress functionality is
-# enabled in FM
-# include_directories(${fs_lib_MISSION_DIR}/fsw/public_inc)
+# Type of data compression to link in.  Actual routines to implement compression
+# are expected to be in a separately loaded library.  Bindings are available for:
+#  FALSE or OFF: Do not include compression
+#  TRUE or ON: Use default compression for the platform (TBD)
+#  CFS_FS_LIB: historical unzip implementation from older versions of CFE FS (deprecated)
+#  ZLIB: Use inflate/deflate API from zlib (http://zlib.net) (not yet implemented)
+set(FM_INCLUDE_COMPRESSION FALSE CACHE STRING "Type of data compression/decompression features to include in FM")
+set(FM_DEPENDENCY_LIST)
+set(FM_OPTION_SRC_FILES)
 
 set(APP_SRC_FILES
   fsw/src/fm_cmd_utils.c
@@ -12,11 +18,38 @@ set(APP_SRC_FILES
   fsw/src/fm_tbl.c
 )
 
+# If compression features are enabled, choose the adapter based on the selected implementation
+if (FM_INCLUDE_COMPRESSION)
+
+  if (FM_INCLUDE_COMPRESSION STREQUAL ZLIB)
+    # Using a properly-maintained external implementation should be preferred
+    # This may be the default in a future release.
+    list(APPEND FM_OPTION_SRC_FILES fsw/src/fm_compression_zlib.c)
+  else()
+    # Older versions of FM used a decompression implemented in CFS FS, so this is
+    # what will be assumed if FM_INCLUDE_COMPRESSION is set to a simple
+    # boolean "ON" or "TRUE".  This code now resides in an external "FS_Lib".
+    list(APPEND FM_DEPENDENCY_LIST fs_lib)
+    list(APPEND FM_OPTION_SRC_FILES fsw/src/fm_compression_fslib.c)
+  endif()
+
+else()
+
+  # FM_INCLUDE_COMPRESSION set to "OFF" or "FALSE" - compression features are not enabled
+  list(APPEND FM_OPTION_SRC_FILES fsw/src/fm_compression_none.c)
+
+endif()
+
 # Create the app module
-add_cfe_app(fm ${APP_SRC_FILES})
+add_cfe_app(fm ${APP_SRC_FILES} ${FM_OPTION_SRC_FILES})
 
 # This permits direct access to public headers in the fsw/inc directory
 target_include_directories(fm PUBLIC fsw/inc)
+
+# Add dependencies based on the type of compression algoritm selected (if any)
+if (FM_DEPENDENCY_LIST)
+  add_cfe_app_dependency(fm ${FM_DEPENDENCY_LIST})
+endif()
 
 set(APP_TABLE_FILES
   fsw/tables/fm_monitor.c
