Fix #89, separate msg size verify
Move the CMD message input size validation to a separate function, so
the command handler does not do this itself.  This allows the handler to
focus on the real message action as opposed to the structure of the
message itself.

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -14,6 +14,7 @@ add_cfe_coverage_stubs("fm_internal"
   stubs/fm_cmd_utils_stubs.c
   stubs/fm_cmd_utils_handlers.c
   stubs/fm_compression_stubs.c
+  stubs/fm_dispatch_stubs.c
   stubs/fm_app_stubs.c
   stubs/fm_child_stubs.c
   stubs/fm_tbl_stubs.c
